# datacol

./: .gitignore  README.md  pyproject.toml  requirements.txt
datacol/: __main__.py  browser.py
