[tool.poetry]
name = "data-col"
version = "0.1.0"
description = "Collect data for VCA QoE using active measurement."
authors = ["Ethan Wu <ethanwu@cs.ucsb.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.3"
webdriver-manager = "^3.5.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
